--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       <footer class="footer">
         <div class="footer-content">
           <p class="copyright">
-            Copyright &copy; 2021, Made with love by Tksuryavanshi
+            Copyright &copy; 2021, Made with love by khushi
           </p>
           <div class="social-list">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
