--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="banner">
           <h1>Architecture & Interior Design</h1>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-          <button>Discover now</button>
+          <button class="btn1"><a href="https://www.behance.net/galleries/architecture" style="color:white">Discover now</a></button>
         </div>
       </header>
 
@@ -52,26 +52,26 @@
             <a href="#" class="menu-link" data-content="Home">Home</a>
           </li>
           <li class="menu-item">
-            <a href="#" class="menu-link" data-content="About Us">About Us</a>
+            <a href="#about-us" class="menu-link" data-content="About Us">About Us</a>
           </li>
           <li class="menu-item">
-            <a href="#" class="menu-link" data-content="Team">Team</a>
+            <a href="#team" class="menu-link" data-content="Team">Team</a>
           </li>
           <li class="menu-item">
             <a href="#" class="menu-link" data-content="Pricing">Pricing</a>
           </li>
           <li class="menu-item">
-            <a href="#" class="menu-link" data-content="Contact">Contact</a>
+            <a href="#contact" class="menu-link" data-content="Contact">Contact</a>
           </li>
         </ul>
         <div class="social-media">
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+          <a href="https://twitter.com/i/flow/login?redirect_after_login=%2F"><i class="fab fa-twitter"></i></a>
         </div>
       </section>
 
-      <section class="about-us">
+      <section id="about-us">
         <div class="section-header">
           <h1 class="section-heading">About Us</h1>
           <div class="underline"></div>
@@ -149,7 +149,7 @@
         </div>
       </section>
 
-      <section class="team">
+      <section id="team">
         <div class="section-header">
           <h1 class="section-heading">Our Team</h1>
           <div class="underline"></div>
@@ -200,7 +200,7 @@
         </div>
       </section>
 
-      <section class="contact">
+      <section id="contact">
         <div class="contact-wrapper">
           <div class="contact-left"></div>
           <div class="contact-right">
@@ -227,12 +227,12 @@
       <footer class="footer">
         <div class="footer-content">
           <p class="copyright">
-            Copyright &copy; 2021, Made with love by khushi
+            Copyright &copy; 2023, Made with love by khushi
           </p>
           <div class="social-list">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+            <a href="https://twitter.com/i/flow/login?redirect_after_login=%2F"><i class="fab fa-twitter"></i></a>
           </div>
         </div>
       </footer>
