--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         </div>
       </section>
 
-      <section id="contact">
+      <section class="contact">
         <div class="contact-wrapper">
           <div class="contact-left"></div>
           <div class="contact-right">
