--- a/index.html
+++ b/index.html
@@ -241,11 +241,14 @@
       </a>
     </div>
 
-    <script src="script.js"></script>
-    <!-- <script
-      src="https://code.jquery.com/jquery-3.5.1.js"
-      integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-      crossorigin="anonymous"
-    ></script> -->
+<script
+type="text/javascript"
+src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
+></script>
+<script type="text/javascript">
+(function () {
+  emailjs.init("ZGzPJRVAi0NKh6B3X");
+})();
+</script>
   </body>
 </html>
