--- a/index.html
+++ b/index.html
@@ -200,28 +200,42 @@
         </div>
       </section>
 
-      <section class="contact">
-        <div class="contact-wrapper">
-          <div class="contact-left"></div>
-          <div class="contact-right">
-            <h1 class="contact-heading">Contact</h1>
-            <form>
-              <div class="input-group">
-                <input type="text" class="field" />
-                <label class="input-label">Full Name</label>
-              </div>
-              <div class="input-group">
-                <input type="email" class="field" />
-                <label class="input-label">Email</label>
-              </div>
-              <div class="input-group">
-                <textarea class="field"></textarea>
-                <label class="message">Message</label>
-              </div>
-              <input type="submit" class="submit-btn" value="Submit" />
-            </form>
-          </div>
+<div class="container border mt-3 bg-light" id="sachin">
+    <div class="row">
+      <div class="col-md-6 p-5 bg-primary text-white">
+        <h1 class="hi">Hi there!</h1>
+        <h4>
+          If you want to contact me just fill this 
+        </h4>
+      </div>
+      <div class="contact2">
+        <h1 class="form1">Contact form</h1>
+        <div class="form-group">
+          <h4 for="name">Name</h4>
+          <input
+            type="text"
+            class="form-control"
+            id="name"
+            placeholder="Enter name"
+          />
         </div>
+        <div class="form-group">
+          <h4 for="email">Email</h4>
+          <input
+            type="email"
+            class="form-control"
+            id="email"
+            placeholder="Enter email"
+          />
+        </div>
+        <div class="form-group">
+          <h4 for="message">Message</h4>
+          <textarea class="form-control" id="message" rows="3"></textarea>
+        </div>
+        <button class="btn btn-primary" onclick="sendMail()">Submit</button>
+      </div>
+    </div>
+  </div>
       </section>
 
       <footer class="footer">
