--- a/index.html
+++ b/index.html
@@ -263,5 +263,6 @@ src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
   emailjs.init("ZGzPJRVAi0NKh6B3X");
 })();
 </script>
+    <script src="script.js"></script>
   </body>
 </html>
