--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
             class="form-control"
             id="name"
             placeholder="Enter name"
+            required
           />
         </div>
         <div class="form-group">
@@ -226,11 +227,12 @@
             class="form-control"
             id="email"
             placeholder="Enter email"
+            required
           />
         </div>
         <div class="form-group">
           <h4 for="message">Message</h4>
-          <textarea class="form-control" id="message" rows="3"></textarea>
+          <textarea class="form-control" id="message" rows="3" required></textarea>
         </div>
         <button class="btn btn-primary" onclick="sendMail()">Submit</button>
       </div>
