--- a/index.html
+++ b/index.html
@@ -202,43 +202,42 @@
 
 <div class="container border mt-3 bg-light" id="sachin">
     <div class="row">
-      <div class="col-md-6 p-5 bg-primary text-white">
-        <h1 class="hi">Hi there!</h1>
-        <h4>
-          If you want to contact me just fill this 
-        </h4>
-      </div>
-      <div class="contact2">
-        <h1 class="form1">Contact form</h1>
-        <div class="form-group">
-          <h4 for="name">Name</h4>
-          <input
-            type="text"
-            class="form-control"
-            id="name"
-            placeholder="Enter name"
-            required
-          />
+        <div class="col-md-6 p-5 bg-primary text-white">
+            <h1 class="hi">Hi there!</h1>
+            <h4>If you want to contact me just fill this</h4>
         </div>
-        <div class="form-group">
-          <h4 for="email">Email</h4>
-          <input
-            type="email"
-            class="form-control"
-            id="email"
-            placeholder="Enter email"
-            required
-          />
+        <div class="contact2">
+            <h1 class="form1">Contact form</h1>
+            <form id="contactForm" onsubmit="return validateForm()">
+                <div class="form-group">
+                    <h4 for="name">Name</h4>
+                    <input
+                        type="text"
+                        class="form-control"
+                        id="name"
+                        placeholder="Enter name"
+                        required
+                    />
+                </div>
+                <div class="form-group">
+                    <h4 for="email">Email</h4>
+                    <input
+                        type="email"
+                        class="form-control"
+                        id="email"
+                        placeholder="Enter email"
+                        required
+                    />
+                </div>
+                <div class="form-group">
+                    <h4 for="message">Message</h4>
+                    <textarea class="form-control" id="message" rows="3" required></textarea>
+                </div>
+                <button class="btn btn-primary">Submit</button>
+            </form>
         </div>
-        <div class="form-group">
-          <h4 for="message">Message</h4>
-          <textarea class="form-control" id="message" rows="3" required></textarea>
-        </div>
-        <button class="btn btn-primary" onclick="sendMail()">Submit</button>
-      </div>
     </div>
-  </div>
-
+</div>
       <footer class="footer">
         <div class="footer-content">
           <p class="copyright">
