--- a/index.html
+++ b/index.html
@@ -265,5 +265,17 @@ src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
 })();
 </script>
     <script src="script.js"></script>
+    <script>
+    function validateForm() {
+        var name = document.getElementById("name").value;
+        var email = document.getElementById("email").value;
+        var message = document.getElementById("message").value;
+
+        if (name === "" || email === "" || message === "") {
+            alert("Please fill in all required fields.");
+            return false;
+        }
+    }
+</script>
   </body>
 </html>
