--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <h4 for="message">Message</h4>
                     <textarea class="form-control" id="message" rows="3" required></textarea>
                 </div>
-                <button class="btn btn-primary">Submit</button>
+                <button class="btn btn-primary" onclick="sendMail()">Submit</button>
             </form>
         </div>
     </div>
