--- a/index.html
+++ b/index.html
@@ -275,6 +275,9 @@ src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
             alert("Please fill in all required fields.");
             return false;
         }
+      else{
+        alert("Your message sent successfully!!")
+      }
     }
 </script>
   </body>
