--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         </div>
       </section>
 
-<div class="container border mt-3 bg-light" id="sachin">
+<div class="container-form border mt-3 bg-light" id="sachin">
     <div class="row">
         <div class="col-md-6 p-5 bg-primary text-white">
             <h1 class="hi">Hi there!</h1>
